--- a/tex/latex/beamer/beamerouterthemeelecprog.sty
+++ b/tex/latex/beamer/beamerouterthemeelecprog.sty
@@ -24,12 +24,14 @@
 \ProcessOptionsBeamer
 
 % Frame title
-\setbeamerfont{frametitle}{size=\Large,series=\bfseries}
+\setbeamerfont{frametitle}{size=\large,series=\bfseries}
 
-\setbeamertemplate{frametitle} {%
-  \vspace*{-3pt}% HACK
-  \begin{beamercolorbox}[wd=\beamer@paperwidth,ht=2em]{frametitle}
-    \vspace{.5em}%
-    {\hspace{.5em}\usebeamerfont{frametitle}\insertframetitle}
+\setbeamertemplate{frametitle} {% BEHOLD THE HACKYNESS
+  \begin{beamercolorbox}[wd=\beamer@paperwidth,sep=0.3cm]{frametitle}
+    \usebeamerfont{frametitle}%
+    \vbox{}\vskip-1ex%
+    \strut\insertframetitle\strut\par%
+    \vskip-1ex%
+    \vskip-.3cm%
   \end{beamercolorbox}%
 }
